--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jose": "^5.10.0",
+    "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sweetalert": "^2.1.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
