--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "@tanstack/react-table": "^8.21.2",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.1",
