1. draft cell formatting done in columns file, 2. new component for button, dropdown, checkbox and lucide-react librar y installed

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-table": "^8.21.2",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.3",
